--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -4,7 +4,8 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "sequelize": "^6.33.0"
   },
   "name": "todo-cli",
   "version": "1.0.0",
@@ -147,6 +148,8 @@
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "pirates": "^4.0.6",
