--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -19,10 +19,16 @@
   "author": "naiksuyog2004 <naiksuyog2004@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "eslint-config-problems": "^8.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1"
   },
